Handle data sources on client
