# src/api/src/didacticalEnigmaRestApi.ts
@@ -21,6 +21,52 @@ class DidacticalEnigmaRestApi extends DidacticalEnigmaRestApiContext {
 
   /**
    * @param [options] The optional parameters
+   * @returns Promise<Models.ListDataSourcesResponse>
+   */
+  listDataSources(options?: msRest.RequestOptionsBase): Promise<Models.ListDataSourcesResponse>;
+  /**
+   * @param callback The callback
+   */
+  listDataSources(callback: msRest.ServiceCallback<Models.DataSourceInformation[]>): void;
+  /**
+   * @param options The optional parameters
+   * @param callback The callback
+   */
+  listDataSources(options: msRest.RequestOptionsBase, callback: msRest.ServiceCallback<Models.DataSourceInformation[]>): void;
+  listDataSources(options?: msRest.RequestOptionsBase | msRest.ServiceCallback<Models.DataSourceInformation[]>, callback?: msRest.ServiceCallback<Models.DataSourceInformation[]>): Promise<Models.ListDataSourcesResponse> {
+    return this.sendOperationRequest(
+      {
+        options
+      },
+      listDataSourcesOperationSpec,
+      callback) as Promise<Models.ListDataSourcesResponse>;
+  }
+
+  /**
+   * @param [options] The optional parameters
+   * @returns Promise<Models.RequestInformationFromDataSourcesResponse>
+   */
+  requestInformationFromDataSources(options?: Models.DidacticalEnigmaRestApiRequestInformationFromDataSourcesOptionalParams): Promise<Models.RequestInformationFromDataSourcesResponse>;
+  /**
+   * @param callback The callback
+   */
+  requestInformationFromDataSources(callback: msRest.ServiceCallback<{ [propertyName: string]: Models.DataSourceParseResponse }>): void;
+  /**
+   * @param options The optional parameters
+   * @param callback The callback
+   */
+  requestInformationFromDataSources(options: Models.DidacticalEnigmaRestApiRequestInformationFromDataSourcesOptionalParams, callback: msRest.ServiceCallback<{ [propertyName: string]: Models.DataSourceParseResponse }>): void;
+  requestInformationFromDataSources(options?: Models.DidacticalEnigmaRestApiRequestInformationFromDataSourcesOptionalParams | msRest.ServiceCallback<{ [propertyName: string]: Models.DataSourceParseResponse }>, callback?: msRest.ServiceCallback<{ [propertyName: string]: Models.DataSourceParseResponse }>): Promise<Models.RequestInformationFromDataSourcesResponse> {
+    return this.sendOperationRequest(
+      {
+        options
+      },
+      requestInformationFromDataSourcesOperationSpec,
+      callback) as Promise<Models.RequestInformationFromDataSourcesResponse>;
+  }
+
+  /**
+   * @param [options] The optional parameters
    * @returns Promise<Models.ListRadicalsResponse>
    */
   listRadicals(options?: msRest.RequestOptionsBase): Promise<Models.ListRadicalsResponse>;
@@ -87,10 +133,109 @@ class DidacticalEnigmaRestApi extends DidacticalEnigmaRestApiContext {
       getWordInformationOperationSpec,
       callback) as Promise<Models.GetWordInformationResponse>;
   }
+
+  /**
+   * @param [options] The optional parameters
+   * @returns Promise<Models.PostTextResponse>
+   */
+  postText(options?: Models.DidacticalEnigmaRestApiPostTextOptionalParams): Promise<Models.PostTextResponse>;
+  /**
+   * @param callback The callback
+   */
+  postText(callback: msRest.ServiceCallback<Models.WordInfoResponse>): void;
+  /**
+   * @param options The optional parameters
+   * @param callback The callback
+   */
+  postText(options: Models.DidacticalEnigmaRestApiPostTextOptionalParams, callback: msRest.ServiceCallback<Models.WordInfoResponse>): void;
+  postText(options?: Models.DidacticalEnigmaRestApiPostTextOptionalParams | msRest.ServiceCallback<Models.WordInfoResponse>, callback?: msRest.ServiceCallback<Models.WordInfoResponse>): Promise<Models.PostTextResponse> {
+    return this.sendOperationRequest(
+      {
+        options
+      },
+      postTextOperationSpec,
+      callback) as Promise<Models.PostTextResponse>;
+  }
+
+  /**
+   * @param [options] The optional parameters
+   * @returns Promise<msRest.RestResponse>
+   */
+  deleteText(options?: Models.DidacticalEnigmaRestApiDeleteTextOptionalParams): Promise<msRest.RestResponse>;
+  /**
+   * @param callback The callback
+   */
+  deleteText(callback: msRest.ServiceCallback<void>): void;
+  /**
+   * @param options The optional parameters
+   * @param callback The callback
+   */
+  deleteText(options: Models.DidacticalEnigmaRestApiDeleteTextOptionalParams, callback: msRest.ServiceCallback<void>): void;
+  deleteText(options?: Models.DidacticalEnigmaRestApiDeleteTextOptionalParams | msRest.ServiceCallback<void>, callback?: msRest.ServiceCallback<void>): Promise<msRest.RestResponse> {
+    return this.sendOperationRequest(
+      {
+        options
+      },
+      deleteTextOperationSpec,
+      callback);
+  }
 }
 
 // Operation Specifications
 const serializer = new msRest.Serializer(Mappers);
+const listDataSourcesOperationSpec: msRest.OperationSpec = {
+  httpMethod: "GET",
+  path: "dataSource/list",
+  responses: {
+    200: {
+      bodyMapper: {
+        serializedName: "parsedResponse",
+        type: {
+          name: "Sequence",
+          element: {
+            type: {
+              name: "Composite",
+              className: "DataSourceInformation"
+            }
+          }
+        }
+      }
+    },
+    default: {}
+  },
+  serializer
+};
+
+const requestInformationFromDataSourcesOperationSpec: msRest.OperationSpec = {
+  httpMethod: "POST",
+  path: "dataSource/request",
+  requestBody: {
+    parameterPath: [
+      "options",
+      "body"
+    ],
+    mapper: Mappers.DataSourceParseRequest
+  },
+  responses: {
+    200: {
+      bodyMapper: {
+        serializedName: "parsedResponse",
+        type: {
+          name: "Dictionary",
+          value: {
+            type: {
+              name: "Composite",
+              className: "DataSourceParseResponse"
+            }
+          }
+        }
+      }
+    },
+    default: {}
+  },
+  serializer
+};
+
 const listRadicalsOperationSpec: msRest.OperationSpec = {
   httpMethod: "GET",
   path: "radicals/list",
@@ -154,6 +299,34 @@ const getWordInformationOperationSpec: msRest.OperationSpec = {
         }
       }
     },
+    default: {}
+  },
+  serializer
+};
+
+const postTextOperationSpec: msRest.OperationSpec = {
+  httpMethod: "POST",
+  path: "wordInfo",
+  queryParameters: [
+    Parameters.fullText
+  ],
+  responses: {
+    200: {
+      bodyMapper: Mappers.WordInfoResponse
+    },
+    default: {}
+  },
+  serializer
+};
+
+const deleteTextOperationSpec: msRest.OperationSpec = {
+  httpMethod: "DELETE",
+  path: "wordInfo",
+  queryParameters: [
+    Parameters.identifier
+  ],
+  responses: {
+    200: {},
     default: {}
   },
   serializer
